--- a/PrimeStringExpress/PrimeStringExpress/views/layout.pug
+++ b/PrimeStringExpress/PrimeStringExpress/views/layout.pug
@@ -6,6 +6,6 @@ html
         //script(type='text/javascript', src='/javascripts/jquery-ui.js')
         script(type='text/javascript', src='/javascripts/jquery.js')
     body
-        form(action='/' method='post')
+        form(action='/', method='post')
             block content
     
